--- a/sass/style.scss
+++ b/sass/style.scss
@@ -150,7 +150,22 @@ section {
       box-shadow: 0px 20px 20px $main-color;
       max-width: 35vw;
       max-height: 70vh;
+      animation: floatImage 4s infinite;
     }
+  }
+}
+
+@keyframes floatImage {
+  0% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-2.4rem);
+  }
+
+  100% {
+    transform: translateY(0);
   }
 }
 
