--- a/sass/_breakpoints.scss
+++ b/sass/_breakpoints.scss
@@ -21,9 +21,9 @@
     padding-bottom: 7rem;
   }
 
-  .contact {
-    min-height: auto;
-  }
+  // .contact {
+  //   // min-height: auto;
+  // }
 
   .footer {
     padding: 2rem 3%;
