--- a/sass/style.scss
+++ b/sass/style.scss
@@ -56,7 +56,7 @@ section {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  right: 0;
   padding: 2rem 9%;
   background: $bg-color;
   display: flex;
